--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -13,8 +13,9 @@
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/default_height"
-            android:layout_marginLeft="@dimen/default_margin_padding"
             android:layout_marginTop="@dimen/default_margin_padding"
+            android:layout_marginLeft="@dimen/default_margin_padding"
+            android:layout_marginRight="@dimen/default_margin_padding"
             android:foreground="?android:attr/selectableItemBackground"
             card_view:cardElevation="@dimen/default_card_elevation"
             card_view:cardCornerRadius="@dimen/default_card_corner"
